--- a/Ogłoszenia Drobne Web App/Views/Offers/Edit.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Edit.cshtml
@@ -34,7 +34,7 @@
             <div class="form-group">
                 <input type="submit" value="Zapisz" class="btn btn-primary buttonLogin" />
             </div>
-            <a asp-action="MyOffers">Powrót</a>
+            <a class="btn buttonDetails" asp-action="MyOffers">Powrót</a>
         </form>
     </div>
 </div>
