--- a/Ogłoszenia Drobne Web App/Views/Admin/AddAdminAlert.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Admin/AddAdminAlert.cshtml
@@ -19,7 +19,7 @@
                 <input type="submit" value="Zatwierdź" class="btn btn-primary buttonDetails" />
             </div>
         </form>
-        <a class="btn btn-primary buttonDetails" asp-controller="Home" asp-action="Index">Powrót</a>
+        <a class="btn buttonDetails" asp-controller="Home" asp-action="Index">Powrót</a>
     </div>
 </div>
 
