--- a/Ogłoszenia Drobne Web App/Views/Admin/UserList.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Admin/UserList.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Ogłoszenia_Drobne_Web_App.Models.AppUser>
 
+<div class="container">
 <table class="table" id="userTable">
     <thead>
         <tr>
@@ -66,3 +67,4 @@
         }
     </tbody>
 </table>
+</div>
