--- a/Ogłoszenia Drobne Web App/Views/BlackWords/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/BlackWords/Create.cshtml
@@ -1,31 +1,33 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.Models.BlackWord
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Dodaj";
 }
 
-<h1>Create</h1>
+<div class="container">
+    <h1>Dodaj</h1>
 
-<h4>BlackWord</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Word" class="control-label"></label>
-                <input asp-for="Word" class="form-control" />
-                <span asp-validation-for="Word" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>Słowo zakazane</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Word" class="control-label"></label>
+                    <input asp-for="Word" class="form-control" />
+                    <span asp-validation-for="Word" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Zatwierdź" class="btn buttonDetails" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a class="btn buttonDetails" asp-action="Index">Powrót</a>
+    </div>
 </div>
 
 @section Scripts {
