--- a/Ogłoszenia Drobne Web App/Views/BlackWords/Delete.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/BlackWords/Delete.cshtml
@@ -1,27 +1,29 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.Models.BlackWord
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Usuń";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <h1>Usuń</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>BlackWord</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Word)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Word)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <h3>Czy napewno chcesz usunąć słowo zakane?</h3>
+    <div>
+        <h4>Słowo zakazane</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Word)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Word)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Usuń" class="btn btn-danger" /> 
+            <a class="btn buttonDetails" asp-action="Index">Powrót</a>
+        </form>
+    </div>
 </div>
