--- a/Ogłoszenia Drobne Web App/Views/BlackWords/Details.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/BlackWords/Details.cshtml
@@ -4,21 +4,23 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="container">
+    <h1>Szczegóły</h1>
 
-<div>
-    <h4>BlackWord</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Word)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Word)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <h4>Słowo zakazane</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Word)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Word)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a class="btn buttonDetails" asp-action="Edit" asp-route-id="@Model.Id">Edytuj</a> 
+        <a class="btn buttonDetails" asp-action="Index">Powrót</a>
+    </div>
 </div>
