--- a/Ogłoszenia Drobne Web App/Views/BlackWords/Index.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/BlackWords/Index.cshtml
@@ -3,33 +3,35 @@
 @{
     ViewData["Title"] = "Zakazane słowa";
 }
+<div class="container">
+    <h1>Zakazane słowa</h1>
 
-<h1>Zakazane słowa</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Word)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Word)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <p>
+        <a class="btn buttonDetails" asp-action="Create">Dodaj</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Word)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Word)
+                    </td>
+                    <td>
+                        <a class="btn buttonDetails" asp-action="Edit" asp-route-id="@item.Id">Edytuj</a>
+                        <a class="btn buttonDetails" asp-action="Details" asp-route-id="@item.Id">Szczegóły</a> 
+                        <a class="btn buttonDetails" asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
