--- a/Ogłoszenia Drobne Web App/Views/Offers/MyOffers.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/MyOffers.cshtml
@@ -3,69 +3,70 @@
 @{
     ViewData["Title"] = "Moje ogłoszenia";
 }
+<div class="container">
+    <p>
+        <a asp-action="Create">Dodaj ogłoszenie</a>
+    </p>
 
-<p>
-    <a asp-action="Create">Dodaj ogłoszenie</a>
-</p>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreationDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ExpirationDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ViewCounter)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Wage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <table class="table">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreationDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ExpirationDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ViewCounter)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Wage)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category.Id)
-                </td>
-                <td>
-                    <a class="btn buttonDetails" asp-action="Edit" asp-route-id="@item.Id">Edytuj</a>
-                    <a class="btn buttonDetails" asp-action="Details" asp-route-id="@item.Id">Szczegóły</a>
-                    <a class="btn buttonDetails" asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CreationDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ExpirationDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ViewCounter)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Wage)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Category)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreationDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ExpirationDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ViewCounter)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Wage)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Category.Id)
+                    </td>
+                    <td>
+                        <a class="btn buttonDetails" asp-action="Edit" asp-route-id="@item.Id">Edytuj</a>
+                        <a class="btn buttonDetails" asp-action="Details" asp-route-id="@item.Id">Szczegóły</a>
+                        <a class="btn buttonDetails" asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    </div>
