--- a/Ogłoszenia Drobne Web App/wwwroot/css/darkmode.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/darkmode.css
@@ -136,3 +136,8 @@ header, footer, a, title, .containe, th, td, .footer {
     border-width: 2px;
     border-color: #a5b1c4;
 }
+
+.container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
