--- a/Ogłoszenia Drobne Web App/wwwroot/css/style.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/style.css
@@ -129,3 +129,8 @@ color: white;
     border-width: 2px;
     border-color: white;
 }
+
+.container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
