--- a/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
@@ -12,7 +12,10 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class="form-control" id="attributeSelect" asp-items="ViewBag.CategoryId">
+                    <option value="-1"></option>
+                </select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -29,6 +32,10 @@
                 <input asp-for="Wage" class="form-control" />
                 <span asp-validation-for="Wage" class="text-danger"></span>
             </div>
+            <div class="d-flex justify-content-center align-items-center" >
+                <div class="spinner-border text-primary" id="loader" style="display:none"></div>
+            </div>
+            <div id="attributesDiv"></div>
             <div class="form-group">
                 <input type="submit" value="Zatwierdź" class="btn btn-primary" />
             </div>
@@ -39,5 +46,6 @@
 
 
 @section Scripts {
+<script src="~/js/Offers/Create.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
