--- a/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ogłoszenia_Drobne_Web_App.Models.Offer
+﻿@model Ogłoszenia_Drobne_Web_App.ViewModels.CreateOfferViewModel
 
 @{
     ViewData["Title"] = "Dodawanie Oferty";
