--- a/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
@@ -20,59 +20,42 @@
         </div>
     </form>
 
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].ExpirationDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].ViewCounter)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].Wage)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].Category)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
+    
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ExpirationDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ViewCounter)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Wage)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Category.CategoryName)
-                    </td>
-                    <td>
-                        <a class="btn buttonDetails" asp-action="Details" asp-route-id="@item.Id">Szczegóły</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+<div class="row mb-2 borderLogin">
+    <div class="col-sm-12 col-md-9 p-2">
+        <h3>@item.Title</h3> 
+    </div>
+    <div class="col-sm-12 col-md-3 p-2">
+        @if (item.Wage == null)
+        {
+            <span>Stawka nieokreślona</span>
+        }
+        else
+        {
+    <h4>@item.Wage zł</h4>
+        }
+    </div>
+    <div class="col-sm-12 col-md-9 p-2">
+        @if (item.Description?.Length > 300)
+        {
+            <span>@item.Description.Substring(0, 300)...</span>
+        }
+        else
+        {
+            <span>@item.Description</span>
+        }
+    </div>
+    <div class="col-sm-12 col-md-3 p-2">
+        <a class="btn buttonDetails" asp-action="Details" asp-route-id="@item.Id">Szczegóły</a>
+    </div>
+</div>
+
+   
+  
+    }
+
 
     @{
         var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
