--- a/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
@@ -35,7 +35,9 @@
             <div class="d-flex justify-content-center align-items-center" >
                 <div class="spinner-border text-primary" id="loader" style="display:none"></div>
             </div>
-            <div id="attributesDiv"></div>
+            <div id="attributesDiv">
+            
+            </div>
             <div class="form-group">
                 <input type="submit" value="Zatwierdź" class="btn buttonDetails" />
             </div>
