--- a/Ogłoszenia Drobne Web App/wwwroot/css/darkmode.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/darkmode.css
@@ -141,3 +141,9 @@ header, footer, a, title, .containe, th, td, .footer {
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1300px;
+    }  
+}
