--- a/Ogłoszenia Drobne Web App/wwwroot/css/contrast.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/contrast.css
@@ -140,3 +140,9 @@ a:hover {
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1300px;
+    }
+}
